# LangChain

01-hello_world/: main.py  pyproject.toml
02-react_search_agent/: README.md  job_search_raw.py  job_search_structured.py  main.py  main_job_search.py  weather_search.py
03-agents_under_the_hood/: 01-agent_loop_langchain_tool_calling.py  02-agent_loop_raw_function_calling.py  3.raw_react_prompt.py  README.md  pyproject.toml
04-rag_gist/: 01-ingestion.py  02-main.py  README.md  pyproject.toml
05-documentation_helper/: README.md  Tavily_Crawl_Demo.ipynb  Tavily_Crawl_Tutorial.ipynb  app.py  ingestion.py  main.py  pyproject.toml
05-documentation_helper/backend/: core.py  ingestion.py
projects/01-hello_world/: .gitignore  README.md  main.py
projects/02-react_search_agent/: .gitignore  main_weather.py
projects/03-agents_under_the_hood/: 2.agent_loop_raw_function_calling.py  README.md
projects/agents_under_the_hood/: 3.raw_react_prompt.py
projects/hello_world/: main.py  pyproject.toml
projects/react_search_agent/: main.py  pyproject.toml
