[project]
name = "04-rag-gist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.2.2",
    "unstructured[all-docs]>=0.24.1",
]
