[project]
name = "05-documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "certifi>=2026.6.17",
    "fastapi>=0.139.2",
    "firecrawl-py>=4.32.1",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchainhub>=0.1.21",
    "langsmith>=0.10.9",
    "nltk>=3.10.0",
    "openai>=2.46.0",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "streamlit-chat>=0.1.1",
    "tiktoken>=0.13.0",
    "tqdm>=4.69.0",
    "unstructured>=0.24.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
